--- a/app/src/main/res/layout/activity_image_list.xml
+++ b/app/src/main/res/layout/activity_image_list.xml
@@ -7,6 +7,7 @@
         android:id="@+id/recyclerViewImageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="8dp"
         android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
