--- a/app/src/main/res/layout/image_list_item.xml
+++ b/app/src/main/res/layout/image_list_item.xml
@@ -21,34 +21,34 @@
             android:padding="4dp">
 
             <ImageView
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
                 android:id="@+id/share_button"
                 android:layout_width="34dp"
-                android:layout_height="34dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
                 android:src="@android:drawable/ic_menu_share" />
 
             <TextView
-                android:layout_alignParentStart="true"
-                android:maxLines="1"
-                android:ellipsize="end"
                 android:id="@+id/image_text"
                 android:layout_width="match_parent"
-                android:gravity="center_vertical"
                 android:layout_height="match_parent"
-                android:textColor="#ffffff"
+                android:layout_alignParentStart="true"
                 android:layout_toStartOf="@+id/share_button"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textColor="#ffffff"
                 tools:text="BLA LBA" />
 
         </RelativeLayout>
 
         <ImageView
-            android:layout_above="@+id/info_layout"
             android:id="@+id/image_view"
-            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_above="@+id/info_layout"
+            android:layout_alignParentTop="true" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
