--- a/app/src/main/res/layout/activity_create_new_image.xml
+++ b/app/src/main/res/layout/activity_create_new_image.xml
@@ -72,11 +72,16 @@
         android:layout_below="@+id/container_time"
         card_view:cardCornerRadius="4dp">
 
-        <FrameLayout
+        <!--<FrameLayout-->
+        <!--android:id="@+id/camera_preview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1" />-->
+
+        <com.sthagios.stopmotion.camera.AutoFitTextureView
             android:id="@+id/camera_preview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="match_parent" />
 
     </android.support.v7.widget.CardView>
 
@@ -103,10 +108,10 @@
 
     <FrameLayout
         android:id="@+id/progress_bar"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:visibility="gone">
 
         <ProgressBar
             android:id="@+id/loading_spinner"
