Open show gif when pressed in list

--- a/app/src/main/res/layout/image_list_item.xml
+++ b/app/src/main/res/layout/image_list_item.xml
@@ -43,6 +43,10 @@
 
         </RelativeLayout>
 
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
