--- a/app/src/main/res/layout/activity_show_gif.xml
+++ b/app/src/main/res/layout/activity_show_gif.xml
@@ -10,10 +10,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sthagios.stopmotion.show.ShowGifActivity">
 
-    <ImageView
-        android:id="@+id/preview"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+
+        <ProgressBar
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true" />
+
+        <ImageView
+            android:id="@+id/preview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/share_button"
