--- a/app/src/main/res/layout/activity_show_gif.xml
+++ b/app/src/main/res/layout/activity_show_gif.xml
@@ -22,6 +22,13 @@
         android:layout_above="@+id/share_button"
         android:layout_alignParentTop="true" />
 
+    <ImageView
+        android:id="@+id/preview_gif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/share_button"
+        android:layout_alignParentTop="true" />
+
     <Button
         android:id="@+id/share_button"
         android:layout_width="wrap_content"
