--- a/app/src/main/res/layout/activity_image_list.xml
+++ b/app/src/main/res/layout/activity_image_list.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <include layout="@layout/toolbar" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/appbar"
         android:id="@+id/recyclerViewImageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,9 +28,10 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:elevation="4dp"
         android:src="@drawable/ic_camera_enhance_black_24dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
