--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,6 +26,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <com.sthagios.stopmotion.settings.CheckBoxPreferenceItem
+                android:id="@+id/use_thumbs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.sthagios.stopmotion.settings.CheckBoxPreferenceItem
+                android:id="@+id/use_pushes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <!-- Infos -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,10 +50,10 @@
                     android:text="Stopmotion" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="128dp"
+                    android:layout_height="128dp"
                     android:layout_gravity="center"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/web_hi_res_512" />
 
                 <TextView
                     android:id="@+id/version_text"
