--- a/app/src/main/res/layout/activity_show_gif.xml
+++ b/app/src/main/res/layout/activity_show_gif.xml
@@ -45,37 +45,58 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/share_button"
+    <RelativeLayout
+        android:id="@+id/fab_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:background="@drawable/ripple_primary_rectangle_round_corners"
+        android:clipChildren="false"
         android:elevation="4dp"
-        android:src="@drawable/ic_share_black_48dp"
         app:layout_anchor="@id/cardView"
-        app:layout_anchorGravity="bottom|start" />
+        app:layout_anchorGravity="end|bottom">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/edit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/ripple_primary_rectangle_round_corners"
-        android:elevation="4dp"
-        android:src="@drawable/ic_edit_black_48dp"
-        app:layout_anchor="@id/cardView"
-        app:layout_anchorGravity="bottom|center_horizontal" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/ripple_primary_rectangle_round_corners"
-        android:elevation="4dp"
-        android:src="@drawable/ic_delete_black_48dp"
-        app:layout_anchor="@id/cardView"
-        app:layout_anchorGravity="bottom|end" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/edit_button"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/ripple_primary_rectangle_round_corners"
+            android:src="@drawable/ic_delete_black_48dp"
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/edit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/share_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ripple_primary_rectangle_round_corners"
+            android:src="@drawable/ic_edit_black_48dp"
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/share_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/expand_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ripple_primary_rectangle_round_corners"
+            android:src="@drawable/ic_share_black_48dp"
+            app:fabSize="mini" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/expand_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ripple_primary_rectangle_round_corners"
+            android:src="@drawable/ic_add_black_48dp" />
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
