--- a/app/src/main/res/drawable-v21/ripple_primary_rectangle_round_corners.xml
+++ b/app/src/main/res/drawable-v21/ripple_primary_rectangle_round_corners.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:attr/colorControlHighlight">
+    android:color="@color/accent">
 
-    <item>
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners
                 android:bottomLeftRadius="8dp"
                 android:bottomRightRadius="8dp"
                 android:topLeftRadius="8dp"
                 android:topRightRadius="8dp" />
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/accent" />
         </shape>
     </item>
 
