--- a/app/src/main/res/drawable-v21/ripple_primary_round.xml
+++ b/app/src/main/res/drawable-v21/ripple_primary_round.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:attr/colorControlHighlight">
+    android:color="@color/accent">
 
-    <item>
+    <item android:id="@android:id/mask">
         <shape android:shape="oval">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/accent" />
         </shape>
     </item>
 
