--- a/app/src/main/res/layout/activity_create_new_image.xml
+++ b/app/src/main/res/layout/activity_create_new_image.xml
@@ -3,44 +3,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
-    <com.sthagios.stopmotion.camera.AutoFitTextureView
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardPreventCornerOverlap="false"
+        card_view:cardUseCompatPadding="true">
+
+    <TextureView
         android:id="@+id/camera_preview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_margin="4dp" />
+        android:scaleType="centerCrop" />
+    </android.support.v7.widget.CardView>
 
     <ImageButton
+        android:elevation="4dp"
         android:id="@+id/button_capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/ripple_primary_round"
         android:padding="8dp"
         android:src="@drawable/ic_camera_black_48dp" />
 
     <ImageButton
+        android:elevation="4dp"
         android:id="@+id/button_switch_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
         android:padding="8dp"
         android:src="@drawable/ic_camera_front_black_48dp" />
 
     <LinearLayout
+        android:elevation="4dp"
         android:id="@+id/container_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
         android:clickable="true"
@@ -64,11 +84,13 @@
 
 
     <LinearLayout
+        android:elevation="4dp"
         android:id="@+id/container_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
         android:clickable="true"
@@ -89,12 +111,5 @@
             android:textSize="24sp"
             tools:text="5" />
     </LinearLayout>
-
-    <ProgressBar
-        tools:visibility="visible"
-        android:visibility="gone"
-        android:id="@+id/loading_bar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </RelativeLayout>
