--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -59,7 +59,7 @@
                     android:id="@+id/version_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Version: " />
+                    tools:text="Version: " />
 
                 <LinearLayout
                     android:id="@+id/debug_info"
