--- a/app/src/main/res/layout/checkbox_preference_item.xml
+++ b/app/src/main/res/layout/checkbox_preference_item.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@+id/checkBox"
-            android:text="Settings 1"
+            tools:text="Settings 1"
             android:textColor="@color/primary_text"
             android:textSize="20sp" />
 
