--- a/app/src/main/res/layout/state_list_item.xml
+++ b/app/src/main/res/layout/state_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Converted"
+            android:text="@string/item_image_converted"
             android:visibility="gone" />
 
         <ProgressBar
