--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,12 +29,19 @@
             <com.sthagios.stopmotion.settings.CheckBoxPreferenceItem
                 android:id="@+id/use_thumbs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
+
+            <com.sthagios.stopmotion.settings.ValuePreferenceItem
+                android:id="@+id/gif_compression"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true" />
 
             <com.sthagios.stopmotion.settings.CheckBoxPreferenceItem
                 android:id="@+id/use_pushes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <!-- Infos -->
             <LinearLayout
