--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="settings_margin_side">8dp</dimen>
     <dimen name="stopmotion_icon_vector_size">350dp</dimen>
+
+
+    <dimen name="preferences_item_padding_top">8dp</dimen>
+    <dimen name="preferences_item_padding_bottom">8dp</dimen>
 </resources>
