--- a/app/src/main/res/layout/image_list_item_empty.xml
+++ b/app/src/main/res/layout/image_list_item_empty.xml
@@ -8,6 +8,8 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true">
 
@@ -18,7 +20,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_camera_add" />
+            android:src="@drawable/ic_add_a_photo" />
 
     </android.support.v7.widget.CardView>
 </FrameLayout>
